2.0.6
- Added adjustable decimal threshold, default still 6 seconds. Only for non-OmniCC users, configurate your OmniCC properly if you are using that.

2.0.5
- Change "Swap Human Racial" setting to instead be "Swap Missing Trinket with Racial". This will move all racials over to trinket spot if they don't have a trinket equipped. (This change is currently only uploaded for Retail due to more testing needed on MoP first)
- Tweak hunter feign alpha to be a bit more visible
- Fix wrong unit in class stacking healer func

2.0.4
- Add back missing "Swap human racial with trinket" setting for the MoP version, where it fits.
- Tweak pixel border show/hide, shouldnt show unless theres a texture now.
- Fix icon position not working properly on Pixelated layout.
- Soft cap on text size increased to 200%

2.0.3
- Interrupted castbars no longer instantly hide but instead show who interrupted and fades the castbar out slowly.
- Fix some hide castbar events
- Fix two lua errors due to typos
- Don't show cooldown spiral on trinket if no trinket texture.

2.0.2
- Add new aura stacks indicator in bottom left corner of Class/Aura Icon.
- Add new text settings that lets you move and resize name, health, etc.
- Fix stealthed units transparency and tweak the amount
- Fix Class Icon Swipe going the wrong way by default after introducing new settings for it.
- Fix frames being bugged after reload while in an arena.
- Fix missing library for SharedMedia causing addon not to load for some people.

2.0.1
- Add /sarena test1-5 command.
- Fix Black DR Border not working during test mode for Pixelated layout.
- Change wording related to other sArena's. Reminder that this version is made based on the original one by Stako with their blessing: "Others are free to submit updates or upload their own versions".

2.0.0
- This sArena version has now also launched as a Retail version! Everything below is for both versions (but MoP needs some more data for the non-duration auras)
- New Retail layout