@@ -1,5 +1,7 @@
 2.0.6
 - Added adjustable decimal threshold, default still 6 seconds. Only for non-OmniCC users, configurate your OmniCC properly if you are using that.
+- Added DR Static Icons: Per Spec option
+- Added DR Categories Per Class & Per Spec option
 
 2.0.5
 - Change "Swap Human Racial" setting to instead be "Swap Missing Trinket with Racial". This will move all racials over to trinket spot if they don't have a trinket equipped. (This change is currently only uploaded for Retail due to more testing needed on MoP first)
